# simple_vlsi_legalizer

./: .1.log.swp  .gitignore  CMakeLists.txt  README.md  db.cpp  db.h  legal.cpp  legal.h  legalizer  main.cpp  parser  parser.cpp  timer.h  utility.h
benchmark/adaptec1/: adaptec1.aux
benchmark/adaptec3/: adaptec3.aux
benchmark/ibm01/: ibm01-cu85.aux
benchmark/ibm09/: ibm09-cu90.aux
vsode/: launch.json
